Mudança no e-mail de Marcos

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         },
         {
             "name": "Marcos SF Filho",
-            "email": "gabsprates@gmail.com",
+            "email": "marcossffilho.dev@gmail.com",
             "homepage": "http://marcossffilho.com",
             "role": "Developer"
         }
